hphp/hack/test/typecheck/typing_fail_bug.php.exp
File "typing_fail_bug.php", line 18, characters 5-8:
Invalid argument (Typing[4110])
File "typing_fail_bug.php", line 21, characters 12-17:
Expected string
File "typing_fail_bug.php", line 14, characters 12-12:
But got int
